USE_MSG_FONT_MEDIUM

--- a/variants/chatter2/platformio.ini
+++ b/variants/chatter2/platformio.ini
@@ -5,6 +5,7 @@ board = esp32doit-devkit-v1
 build_flags =
   ${esp32_base.build_flags}
   -D CHATTER_2
+  -D USE_MSG_FONT_MEDIUM
   -I variants/chatter2
   
 lib_deps =
