--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -67,6 +67,7 @@ build_flags =
   -D VIEW_320x240
 ;	-D USE_DOUBLE_BUFFER
   -D USE_PACKET_API
+  -D USE_MSG_FONT_MEDIUM
 
 lib_deps =
   ${env:t-deck.lib_deps}
