--- a/platformio.ini
+++ b/platformio.ini
@@ -50,6 +50,7 @@ build_flags = -Wno-missing-field-initializers
 	-DMESHTASTIC_EXCLUDE_REMOTEHARDWARE=1
 	-DMESHTASTIC_EXCLUDE_HEALTH_TELEMETRY=1
   	-DMESHTASTIC_EXCLUDE_POWERSTRESS=1 ; exclude power stress test module from main firmware
+	-DMESHTASTIC_EXCLUDE_GENERIC_THREAD_MODULE=1
         #-DBUILD_EPOCH=$UNIX_TIME
         #-D OLED_PL=1
 
