--- a/variants/tbeam/platformio.ini
+++ b/variants/tbeam/platformio.ini
@@ -3,10 +3,12 @@
 extends = esp32_base
 board = ttgo-t-beam
 board_check = true
-lib_deps =
-  ${esp32_base.lib_deps}
-build_flags = 
-  ${esp32_base.build_flags} -D TBEAM_V10  -I variants/tbeam
+lib_deps = ${esp32_base.lib_deps}
+  lewisxhe/SensorLib@0.2.0 ; touchscreen addon
+  https://github.com/Nasimovy/st7796/archive/refs/tags/1.0.1.zip ; display addon
+build_flags = ${esp32_base.build_flags}
+  -DTBEAM_V10
+  -Ivariants/tbeam
   -DGPS_POWER_TOGGLE ; comment this line to disable double press function on the user button to turn off gps entirely.
   -DBOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
