--- a/.github/workflows/release_channels.yml
+++ b/.github/workflows/release_channels.yml
@@ -46,7 +46,7 @@ jobs:
 
   # Create a PR to bump version when a release is Published
   bump-version:
-    if: ${{ github.event.release.published }}
+    if: github.event.action == 'published'
     runs-on: ubuntu-latest
     permissions:
       pull-requests: write
