--- a/.github/workflows/release_channels.yml
+++ b/.github/workflows/release_channels.yml
@@ -93,6 +93,7 @@ jobs:
       - name: Bump org.meshtastic.meshtasticd.metainfo.xml
         shell: bash
         run: |
+          pip install defusedxml -q
           chmod +x ./bin/bump_metainfo.py
           ./bin/bump_metainfo.py --file bin/org.meshtastic.meshtasticd.metainfo.xml "v${{ steps.version.outputs.long }}"
 
