--- a/.github/workflows/release_channels.yml
+++ b/.github/workflows/release_channels.yml
@@ -51,6 +51,9 @@ jobs:
     permissions:
       pull-requests: write
       contents: write
+    defaults:
+      run:
+        shell: bash
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -70,22 +73,25 @@ jobs:
           BUILD_LOCATION: local
 
       - name: Bump version.properties
-        run: >-
-          bin/bump_version.py
+        run: |
+          # Bump version.properties
+          chmod +x ./bin/bump_version.py
+          ./bin/bump_version.py
 
       - name: Ensure debian deps are installed
-        shell: bash
         run: |
           sudo apt-get update -y --fix-missing
           sudo apt-get install -y devscripts
 
       - name: Update debian changelog
-        run: >-
-          debian/ci_changelog.sh
+        run: |
+          # Update debian changelog
+          chmod +x ./debian/ci_changelog.sh
+          ./debian/ci_changelog.sh
 
       - name: Bump org.meshtastic.meshtasticd.metainfo.xml
-        shell: bash
         run: |
+          # Bump org.meshtastic.meshtasticd.metainfo.xml
           pip install -r bin/bump_metainfo/requirements.txt -q
           chmod +x ./bin/bump_metainfo/bump_metainfo.py
           ./bin/bump_metainfo/bump_metainfo.py --file bin/org.meshtastic.meshtasticd.metainfo.xml "${{ steps.version.outputs.short }}"
