--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -3,7 +3,6 @@
 extends = esp32s3_base
 board = crowpanel
 board_check = true
-board_level = extra
 upload_protocol = esptool
 
 build_flags = ${esp32s3_base.build_flags}
@@ -83,8 +82,10 @@ build_flags =
   ${crowpanel_base_tft.build_flags}
   -D TFT_HEIGHT=320 ; needed in variant.h
   -D HAS_SDCARD
+  -D SDCARD_USE_SOFT_SPI
+  -D SPI_DRIVER_SELECT=2
   -D USE_I2S_BUZZER
-;  -D INPUTDRIVER_BUTTON_TYPE=0
+  -D INPUTDRIVER_BUTTON_TYPE=0
   -D LGFX_DRIVER_TEMPLATE
   -D LGFX_DRIVER=LGFX_GENERIC
   -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_GENERIC.h\"
@@ -128,8 +129,10 @@ build_flags =
   ${crowpanel_base_tft.build_flags}
   -D TFT_HEIGHT=480 ; needed in variant.h
   -D HAS_SDCARD
+  -D SDCARD_USE_SOFT_SPI
+  -D SPI_DRIVER_SELECT=2
   -D USE_I2S_BUZZER
-;  -D INPUTDRIVER_BUTTON_TYPE=0
+  -D INPUTDRIVER_BUTTON_TYPE=0
   -D LV_CACHE_DEF_SIZE=2097152
   -D LGFX_DRIVER_TEMPLATE
   -D LGFX_DRIVER=LGFX_GENERIC
@@ -159,6 +162,7 @@ build_flags =
 # 4.3 inch 800x480 IPS ST7265
 [env:elecrow-43]
 extends = crowpanel_base
+board_level = extra
 
 build_flags =
   ${crowpanel_base.build_flags}
@@ -172,6 +176,7 @@ build_flags =
 # 5 inch 800x480 IPS ST7262
 [env:elecrow-50]
 extends = crowpanel_base
+board_level = extra
 
 build_flags =
   ${crowpanel_base.build_flags}
@@ -185,6 +190,7 @@ build_flags =
 # 7 inch 800x480 IPS SC7277
 [env:elecrow-70]
 extends = crowpanel_base
+board_level = extra
 
 build_flags =
   ${crowpanel_base.build_flags}
@@ -197,6 +203,7 @@ build_flags =
 
 [env:elecrow-70-tft]
 extends = crowpanel_base_tft
+board_level = extra
 
 build_flags =
   ${crowpanel_base_tft.build_flags}
