Switch to actually maintained thingsboard pubsubclient (#5204)
* Switch to actually maintained thingsboard pubsubclient

* .0

* TBPubSubClient

* SetBufferSize is split into Send and Receive.

* Update TBPubSubClient to 2.11

* Update platformio.ini

Co-authored-by: Austin <vidplace7@gmail.com>

* Re-add setBufferSize fix

---------

Co-authored-by: Tom Fifield <tom@tomfifield.net>
Co-authored-by: Austin <vidplace7@gmail.com>

--- a/platformio.ini
+++ b/platformio.ini
@@ -93,8 +93,8 @@ build_src_filter = ${env.build_src_filter} -<platform/portduino/> -<graphics/nic
 ; Common libs for communicating over TCP/IP networks such as MQTT
 [networking_base]
 lib_deps =
-	# renovate: datasource=custom.pio depName=PubSubClient packageName=knolleary/library/PubSubClient
-	knolleary/PubSubClient@2.8
+	# renovate: datasource=custom.pio depName=TBPubSubClient packageName=thingsboard/library/TBPubSubClient
+	thingsboard/TBPubSubClient@2.12.1
 	# renovate: datasource=custom.pio depName=NTPClient packageName=arduino-libraries/library/NTPClient
 	arduino-libraries/NTPClient@3.2.1
 	# renovate: datasource=custom.pio depName=Syslog packageName=arcao/library/Syslog
