--- a/.github/workflows/release_channels.yml
+++ b/.github/workflows/release_channels.yml
@@ -99,7 +99,7 @@ jobs:
       - name: Create Bumps pull request
         uses: peter-evans/create-pull-request@v7
         with:
-          title: "Bump: Bumps on Published release"
+          title: Bump release version
           commit-message: automated bumps
           add-paths: |
             version.properties
