--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -85,7 +85,8 @@ build_flags =
   -D SDCARD_USE_SOFT_SPI
   -D SPI_DRIVER_SELECT=2
   -D USE_I2S_BUZZER
-  -D INPUTDRIVER_BUTTON_TYPE=0
+;  -D INPUTDRIVER_BUTTON_TYPE=0 ; no button as this pin is assigned to LoRa cs!
+  -D SCREEN_TOUCH_INT=47 ; used to wake up the MCU by touch
   -D LGFX_DRIVER_TEMPLATE
   -D LGFX_DRIVER=LGFX_GENERIC
   -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_GENERIC.h\"
