don't build non-MUI variants

--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -66,6 +66,7 @@ lib_deps =
 # 2.4/2.8 inch 320x240 IPS ST7789
 [env:elecrow-24-28]
 extends = crowpanel_base
+board_level = extra
 
 build_flags =
   ${crowpanel_base.build_flags}
@@ -114,6 +115,7 @@ build_flags =
 # 3.5 inch 480x320 IPS ILI9488
 [env:elecrow-35]
 extends = crowpanel_base
+board_level = extra
 
 build_flags =
   ${crowpanel_base.build_flags}
@@ -215,5 +217,3 @@ build_flags =
 
 build_src_filter =
   ${crowpanel_base_tft.build_src_filter}
-  +<../lib/device-ui/generated/ui_800x480>
-  +<../lib/device-ui/generated/ui_800x480/images>
