modified variant.h and merged ini file+testing on lower spi frequency for the lora module, display shield pumps out EMI?

--- a/variants/tbeam/platformio.ini
+++ b/variants/tbeam/platformio.ini
@@ -5,9 +5,21 @@ board = ttgo-t-beam
 board_check = true
 lib_deps = ${esp32_base.lib_deps}
 build_flags = ${esp32_base.build_flags}
-  -DTBEAM_V10
-  -Ivariants/tbeam
-  -DGPS_POWER_TOGGLE ; comment this line to disable double press function on the user button to turn off gps entirely.
-  -DBOARD_HAS_PSRAM
+  -D TBEAM_V10
+  -I variants/tbeam
+  -D GPS_POWER_TOGGLE ; comment this line to disable double press function on the user button to turn off gps entirely.
+  -D BOARD_HAS_PSRAM
   -mfix-esp32-psram-cache-issue
 upload_speed = 921600
+
+[env:tbeam-displayshield]
+extends = env:tbeam
+
+build_flags =
+  ${env:tbeam.build_flags}
+  -D USE_ST7796
+
+lib_deps =
+  ${env:tbeam.lib_deps}
+  https://github.com/Nasimovy/st7796/archive/refs/tags/1.0.5.zip ; display addon
+  lewisxhe/SensorLib@0.2.0 ; touchscreen addon
