--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -41,7 +41,6 @@ build_flags =
   -D CONFIG_DISABLE_HAL_LOCKS=1
   -D HAS_SCREEN=0
   -D HAS_TFT=1
-;  -D USE_PIN_BUZZER
   -D RAM_SIZE=6144
 	-D LV_LVGL_H_INCLUDE_SIMPLE
 	-D LV_CONF_INCLUDE_SIMPLE
@@ -85,7 +84,7 @@ build_flags =
   -D HAS_SDCARD
   -D SDCARD_USE_SOFT_SPI
   -D SPI_DRIVER_SELECT=2
-  -D USE_I2S_BUZZER
+  -D USE_PIN_BUZZER
 ;  -D INPUTDRIVER_BUTTON_TYPE=0 ; no button as this pin is assigned to LoRa cs!
   -D SCREEN_TOUCH_INT=47 ; used to wake up the MCU by touch
   -D LGFX_DRIVER_TEMPLATE
@@ -134,8 +133,9 @@ build_flags =
   -D HAS_SDCARD
   -D SDCARD_USE_SOFT_SPI
   -D SPI_DRIVER_SELECT=2
-  -D USE_I2S_BUZZER
-  -D INPUTDRIVER_BUTTON_TYPE=0
+  -D USE_PIN_BUZZER
+;  -D INPUTDRIVER_BUTTON_TYPE=0 ; no button as this pin is assigned to LoRa cs!
+  -D SCREEN_TOUCH_INT=47 ; used to wake up the MCU by touch
   -D LV_CACHE_DEF_SIZE=2097152
   -D LGFX_DRIVER_TEMPLATE
   -D LGFX_DRIVER=LGFX_GENERIC
