Finalize support for Crowpanel TFT 2.4, 2.8 and 3.5

--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -1,34 +1,20 @@
-; elecrow 7inch Advanced
 [crowpanel_base]
 extends = esp32s3_base
 board = crowpanel
 board_check = true
 upload_protocol = esptool
-
-build_flags = ${esp32s3_base.build_flags}
-  -Ivariants/elecrow_panel
-  -DELECROW
-  -DPRIVATE_HW
-  -DCONFIG_ARDUHAL_LOG_COLORS
-  -DRADIOLIB_DEBUG_SPI=0
-  -DRADIOLIB_DEBUG_PROTOCOL=0
-  -DRADIOLIB_DEBUG_BASIC=0
-  -DRADIOLIB_VERBOSE_ASSERT=0
-  -DRADIOLIB_SPI_PARANOID=0
-
-lib_deps = ${esp32s3_base.lib_deps}
-  earlephilhower/ESP8266Audio@^1.9.9
-  earlephilhower/ESP8266SAM@^1.0.1
-  lovyan03/LovyanGFX@^1.2.0
-  hideakitai/TCA9534@^0.1.1
-
-[crowpanel_base_tft]
-extends = crowpanel_base
-board_level = main
 board_build.partitions = default_16MB.csv ; must be here for some reason, board.json is not enough !?
 
-build_flags =
-  ${crowpanel_base.build_flags} -Os
+build_flags = ${esp32s3_base.build_flags} -Os
+  -I variants/elecrow_panel
+  -D ELECROW
+  -D PRIVATE_HW
+  -D CONFIG_ARDUHAL_LOG_COLORS
+  -D RADIOLIB_DEBUG_SPI=0
+  -D RADIOLIB_DEBUG_PROTOCOL=0
+  -D RADIOLIB_DEBUG_BASIC=0
+  -D RADIOLIB_VERBOSE_ASSERT=0
+  -D RADIOLIB_SPI_PARANOID=0
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER=1
@@ -55,31 +41,18 @@ build_flags =
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
   -D USE_PACKET_API
 
-build_src_filter =
-  ${crowpanel_base.build_src_filter}
-
-lib_deps =
-  ${crowpanel_base.lib_deps}
+lib_deps = ${esp32s3_base.lib_deps}
   ${device-ui_base.lib_deps}
+  earlephilhower/ESP8266Audio@^1.9.9
+  earlephilhower/ESP8266SAM@^1.0.1
+  lovyan03/LovyanGFX@^1.2.0
+  hideakitai/TCA9534@^0.1.1
 
-# 2.4/2.8 inch 320x240 IPS ST7789
-[env:elecrow-24-28]
+[env:elecrow-24-28-tft]
 extends = crowpanel_base
-board_level = extra
 
 build_flags =
   ${crowpanel_base.build_flags}
-    -D TFT_HEIGHT=320
-    -D TFT_WIDTH=240
-    -D TFT_OFFSET_X=0
-    -D TFT_OFFSET_Y=0
-    -D TFT_BUSY=-1
-
-[env:elecrow-24-28-tft]
-extends = crowpanel_base_tft
-
-build_flags =
-  ${crowpanel_base_tft.build_flags}
   -D TFT_HEIGHT=320 ; needed in variant.h
   -D HAS_SDCARD
   -D SDCARD_USE_SOFT_SPI
@@ -111,24 +84,11 @@ build_flags =
   -D VIEW_320x240
   -D MAP_FULL_REDRAW
 
-# 3.5 inch 480x320 IPS ILI9488
-[env:elecrow-35]
+[env:elecrow-35-tft]
 extends = crowpanel_base
-board_level = extra
 
 build_flags =
   ${crowpanel_base.build_flags}
-    -D TFT_HEIGHT=480
-    -D TFT_WIDTH=320
-    -D TFT_OFFSET_X=0
-    -D TFT_OFFSET_Y=0
-    -D TFT_BUSY=-1
-
-[env:elecrow-35-tft]
-extends = crowpanel_base_tft
-
-build_flags =
-  ${crowpanel_base_tft.build_flags}
   -D TFT_HEIGHT=480 ; needed in variant.h
   -D HAS_SDCARD
   -D SDCARD_USE_SOFT_SPI
@@ -161,59 +121,3 @@ build_flags =
   -D DISPLAY_SET_RESOLUTION
   -D VIEW_320x240
   -D MAP_FULL_REDRAW
-
-# 4.3 inch 800x480 IPS ST7265
-[env:elecrow-43]
-extends = crowpanel_base
-board_level = extra
-
-build_flags =
-  ${crowpanel_base.build_flags}
-    -D TFT_HEIGHT=480
-    -D TFT_WIDTH=800
-    -D TFT_OFFSET_X=0
-    -D TFT_OFFSET_Y=0
-    -D TFT_BUSY=-1
-    -D CROW_SELECT=1
-  
-# 5 inch 800x480 IPS ST7262
-[env:elecrow-50]
-extends = crowpanel_base
-board_level = extra
-
-build_flags =
-  ${crowpanel_base.build_flags}
-    -D TFT_HEIGHT=480
-    -D TFT_WIDTH=800
-    -D TFT_OFFSET_X=0
-    -D TFT_OFFSET_Y=0
-    -D TFT_BUSY=-1
-    -D CROW_SELECT=2
-
-# 7 inch 800x480 IPS SC7277
-[env:elecrow-70]
-extends = crowpanel_base
-board_level = extra
-
-build_flags =
-  ${crowpanel_base.build_flags}
-    -D TFT_HEIGHT=480
-    -D TFT_WIDTH=800
-    -D TFT_OFFSET_X=0
-    -D TFT_OFFSET_Y=0
-    -D TFT_BUSY=-1
-    -D CROW_SELECT=3
-
-[env:elecrow-70-tft]
-extends = crowpanel_base_tft
-board_level = extra
-
-build_flags =
-  ${crowpanel_base_tft.build_flags}
-  -D LGFX_DRIVER=LGFX_ELECROW70
-  -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_ELECROW70.h\"
-  -D VIEW_800x480
-  -I lib/device-ui/generated/ui_800x480
-
-build_src_filter =
-  ${crowpanel_base_tft.build_src_filter}
