add hardware ID for TFT panels

--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -8,7 +8,7 @@ board_build.partitions = default_16MB.csv ; must be here for some reason, board.
 build_flags = ${esp32s3_base.build_flags} -Os
   -I variants/elecrow_panel
   -D ELECROW
-  -D PRIVATE_HW
+  -D ELECROW_PANEL
   -D CONFIG_ARDUHAL_LOG_COLORS
   -D RADIOLIB_DEBUG_SPI=0
   -D RADIOLIB_DEBUG_PROTOCOL=0
