--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -121,3 +121,50 @@ build_flags =
   -D DISPLAY_SET_RESOLUTION
   -D VIEW_320x240
   -D MAP_FULL_REDRAW
+
+# 4.3 inch 800x480 IPS ST7265
+[env:elecrow-43-tft]
+extends = crowpanel_base
+board_level = extra
+
+build_flags =
+  ${crowpanel_base.build_flags}
+    -D TFT_HEIGHT=480
+    -D TFT_WIDTH=800
+    -D TFT_OFFSET_X=0
+    -D TFT_OFFSET_Y=0
+    -D TFT_BUSY=-1
+    -D CROW_SELECT=1
+  
+# 5 inch 800x480 IPS ST7262
+[env:elecrow-50-tft]
+extends = crowpanel_base
+board_level = extra
+
+build_flags =
+  ${crowpanel_base.build_flags}
+    -D TFT_HEIGHT=480
+    -D TFT_WIDTH=800
+    -D TFT_OFFSET_X=0
+    -D TFT_OFFSET_Y=0
+    -D TFT_BUSY=-1
+    -D CROW_SELECT=2
+
+# 7 inch 800x480 IPS SC7277
+[env:elecrow-70-tft]
+extends = crowpanel_base
+board_level = extra
+
+build_flags =
+  ${crowpanel_base.build_flags}
+    -D TFT_HEIGHT=480
+    -D TFT_WIDTH=800
+    -D TFT_OFFSET_X=0
+    -D TFT_OFFSET_Y=0
+    -D TFT_BUSY=-1
+    -D CROW_SELECT=3
+    -D LGFX_DRIVER=LGFX_ELECROW70
+    -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_ELECROW70.h\"
+    -D VIEW_800x480
+    -I lib/device-ui/generated/ui_800x480
+
