Improve pio config. Fix Nimble pin code issue. Address some PR comments.

--- a/variants/tlora_c6/platformio.ini
+++ b/variants/tlora_c6/platformio.ini
@@ -1,41 +1,20 @@
 [env:tlora-c6]
 extends = esp32c6_base
-platform = https://github.com/pioarduino/platform-espressif32.git#f5d602fa7b4b778604306a149fe474723e79be2d
 framework = arduino, espidf
 board = esp32-c6-devkitm-1
+board_check = true
 board_build.partitions = partition-table.csv
 upload_protocol = esptool
 upload_speed = 921600
-monitor_speed = 460800
-monitor_filters = esp32_c3_exception_decoder
 extra_scripts = pre:bin/platformio-custom.py
-
-build_unflags =
-  -D HAS_BLUETOOTH
-  -D MESHTASTIC_EXCLUDE_BLUETOOTH
-  -D HAS_WIFI
-
 build_flags =
   ${esp32c6_base.build_flags}
   -D TLORA_C6
   -I variants/tlora_c6
-  -DARDUINO_USB_CDC_ON_BOOT=1
-  -DARDUINO_USB_MODE=1
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D ARDUINO_USB_MODE=1
   -L "${platformio.libdeps_dir}/${this.__env__}/bsec2/src/esp32c3"
   -D HAS_BLUETOOTH=1
   -D MESHTASTIC_EXCLUDE_WEBSERVER
   -D MESHTASTIC_EXCLUDE_MQTT
   -D CONFIG_NIMBLE_CPP_FREERTOS_TASK_BLOCK_BIT=1
-
-board_build.embed_txtfiles =
-  managed_components/espressif__esp_insights/server_certs/https_server.crt
-  managed_components/espressif__esp_rainmaker/server_certs/rmaker_mqtt_server.crt
-  managed_components/espressif__esp_rainmaker/server_certs/rmaker_claim_service_server.crt
-  managed_components/espressif__esp_rainmaker/server_certs/rmaker_ota_server.crt
-
-lib_deps =
-  ${esp32c6_base.lib_deps}
-  https://github.com/h2zero/esp-nimble-cpp.git#2.0.2
-
-lib_ignore =
-  ${esp32c6_base.lib_ignore}
