--- a/arch/esp32/esp32c6.ini
+++ b/arch/esp32/esp32c6.ini
@@ -30,7 +30,8 @@ lib_deps =
   https://github.com/meshtastic/ESP32_Codec2/archive/633326c78ac251c059ab3a8c430fcdf25b41672f.zip
   # renovate: datasource=custom.pio depName=rweather/Crypto packageName=rweather/library/Crypto
   rweather/Crypto@^0.4.0
-  https://github.com/h2zero/esp-nimble-cpp.git#2.2.1
+  # renovate: datasource=github-tags depName=esp-nimble-cpp packageName=h2zero/esp-nimble-cpp
+  https://github.com/h2zero/esp-nimble-cpp/archive/2.2.1.zip
 
 build_src_filter = 
  ${esp32_base.build_src_filter} -<mesh/http> 
