--- a/.github/workflows/main_matrix.yml
+++ b/.github/workflows/main_matrix.yml
@@ -424,6 +424,31 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  publish-firmware:
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    needs: [release-firmware]
+    env:
+      targets: esp32,esp32s3,esp32c3,esp32c6,nrf52840,rp2040,stm32
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+
+      - name: Get release version string
+        run: echo "long=$(./bin/buildinfo.py long)" >> $GITHUB_OUTPUT
+        id: version
+
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: firmware-{${{ env.targets }}}-${{ steps.version.outputs.long }}
+          merge-multiple: true
+          path: ./publish
+
       - name: Publish firmware to meshtastic.github.io
         uses: peaceiris/actions-gh-pages@v4
         env:
@@ -433,10 +458,10 @@ jobs:
           deploy_key: ${{ secrets.DIST_PAGES_DEPLOY_KEY }}
           external_repository: meshtastic/meshtastic.github.io
           publish_branch: master
-          publish_dir: ./output
+          publish_dir: ./publish
           destination_dir: ${{ env.DEST_PREFIX }}firmware-${{ steps.version.outputs.long }}
           keep_files: true
           user_name: github-actions[bot]
           user_email: github-actions[bot]@users.noreply.github.com
-          commit_message: ${{ steps.version.outputs.long }} ${{ matrix.arch }}
+          commit_message: ${{ steps.version.outputs.long }}
           enable_jekyll: true
