Very WIP attempt to get Native Sensors working.

--- a/arch/portduino/portduino.ini
+++ b/arch/portduino/portduino.ini
@@ -15,15 +15,13 @@ build_src_filter =
   +<mesh/raspihttp/>
   -<mesh/eth/>
   -<modules/esp32>
-  -<modules/Telemetry/EnvironmentTelemetry.cpp>
-  -<modules/Telemetry/AirQualityTelemetry.cpp>
-  -<modules/Telemetry/Sensor>
   +<../variants/portduino>
 
 lib_deps =
   ${env.lib_deps}
   ${networking_base.lib_deps}
   ${radiolib_base.lib_deps}
+  ${environmental_base.lib_deps}
   rweather/Crypto@^0.4.0
   lovyan03/LovyanGFX@^1.2.0
   https://github.com/pine64/libch341-spi-userspace#a9b17e3452f7fb747000d9b4ad4409155b39f6ef
