Added flight mode build flag

--- a/userPrefs.jsonc
+++ b/userPrefs.jsonc
@@ -29,6 +29,7 @@
   // "USERPREFS_FIXED_GPS_LON": "2.294508368",
   // "USERPREFS_CONFIG_SMART_POSITION_ENABLED": "false",
   // "USERPREFS_CONFIG_GPS_UPDATE_INTERVAL": "600",
+  // "USERPREFS_GPS_FLIGHT_MODE": "true",
   // "USERPREFS_CONFIG_POSITION_BROADCAST_INTERVAL": "1800",
   // "USERPREFS_LORACONFIG_CHANNEL_NUM": "31",
   // "USERPREFS_LORACONFIG_MODEM_PRESET": "meshtastic_Config_LoRaConfig_ModemPreset_SHORT_FAST",
