Move back to Adafruit BusIO after patch

--- a/platformio.ini
+++ b/platformio.ini
@@ -113,9 +113,8 @@ lib_deps =
 ; Common libs for environmental measurements in telemetry module
 [environmental_base]
 lib_deps =
-	# renovate: datasource=custom.pio depName=Adafruit BusIO packageName=adafruit/library/Adafruit BusIO
-	#adafruit/Adafruit BusIO@1.17.0
-	https://github.com/meshtastic/Adafruit_BusIO/archive/18a22e98ac65dc3a01255c51a22cc0444cde36d0.zip
+	# renovate: datasource=git-refs depName=Adafruit BusIO packageName=https://github.com/adafruit/Adafruit_BusIO gitBranch=master
+	https://github.com/adafruit/Adafruit_BusIO/archive/5e8f137415f473e390c9410421bb54d828898fad.zip
 	# renovate: datasource=custom.pio depName=Adafruit Unified Sensor packageName=adafruit/library/Adafruit Unified Sensor
 	adafruit/Adafruit Unified Sensor@1.1.15
 	# renovate: datasource=custom.pio depName=Adafruit BMP280 packageName=adafruit/library/Adafruit BMP280 Library
