--- a/arch/portduino/portduino.ini
+++ b/arch/portduino/portduino.ini
@@ -17,15 +17,13 @@ build_src_filter =
   +<mesh/raspihttp/>
   -<mesh/eth/>
   -<modules/esp32>
-  -<modules/Telemetry/EnvironmentTelemetry.cpp>
-  -<modules/Telemetry/AirQualityTelemetry.cpp>
-  -<modules/Telemetry/Sensor>
   +<../variants/portduino>
 
 lib_deps =
   ${env.lib_deps}
   ${networking_base.lib_deps}
   ${radiolib_base.lib_deps}
+  ${environmental_base.lib_deps}
   # renovate: datasource=custom.pio depName=rweather/Crypto packageName=rweather/library/Crypto
   rweather/Crypto@^0.4.0
   # renovate: datasource=custom.pio depName=LovyanGFX packageName=lovyan03/library/LovyanGFX
@@ -49,3 +47,5 @@ build_flags =
   -luv
   -std=gnu17
   -std=c++17
+
+lib_ignore = Adafruit NeoPixel
