--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -8,10 +8,11 @@ plugins:
       uri: https://github.com/trunk-io/plugins
 lint:
   enabled:
+    - checkov@3.2.414
     - renovate@40.0.6
     - prettier@3.5.3
-    - trufflehog@3.88.26
-    - yamllint@1.37.0
+    - trufflehog@3.88.27
+    - yamllint@1.37.1
     - bandit@1.8.3
     - terrascan@1.19.9
     - trivy@0.61.1
