--- a/variants/rak4631_nomadstar_meteor_pro/platformio.ini
+++ b/variants/rak4631_nomadstar_meteor_pro/platformio.ini
@@ -1,4 +1,4 @@
-; The very slick RAK wireless RAK 4631 / 4630 board - Unified firmware for 5005/19003, with or without OLED RAK 1921
+; NomadStar Meteor Pro based on RAK4631 with RGBW LED LP5562 support
 [env:rak4631_nomadstar_meteor_pro]
 extends = nrf52840_base
 board = wiscore_rak4631
