--- a/renovate.json
+++ b/renovate.json
@@ -71,7 +71,7 @@
   ],
   "packageRules": [
     {
-      "matchPackageNames": ["meshtastic/device-ui"],
+      "matchDepNames": ["meshtastic/device-ui"],
       "reviewers": ["mverch67"],
       "changelogUrl": "https://github.com/meshtastic/device-ui/compare/{{currentDigest}}...{{newDigest}}"
     }
