--- a/userPrefs.jsonc
+++ b/userPrefs.jsonc
@@ -1,27 +1,27 @@
 {
   // "USERPREFS_BUTTON_PIN": "36",
-  // "USERPREFS_CHANNELS_TO_WRITE": "3",
+  "USERPREFS_CHANNELS_TO_WRITE": "3",
   // "USERPREFS_CHANNEL_0_DOWNLINK_ENABLED": "false",
-  // "USERPREFS_CHANNEL_0_NAME": "REPLACEME",
-  // "USERPREFS_CHANNEL_0_PRECISION": "14",
-  // "USERPREFS_CHANNEL_0_PSK": "{ 0x38, 0x4b, 0xbc, 0xc0, 0x1d, 0xc0, 0x22, 0xd1, 0x81, 0xbf, 0x36, 0xb8, 0x61, 0x21, 0xe1, 0xfb, 0x96, 0xb7, 0x2e, 0x55, 0xbf, 0x74, 0x22, 0x7e, 0x9d, 0x6a, 0xfb, 0x48, 0xd6, 0x4c, 0xb1, 0xa1 }",
-  // "USERPREFS_CHANNEL_0_UPLINK_ENABLED": "true",
+  "USERPREFS_CHANNEL_0_NAME": "Hamvention",
+  "USERPREFS_CHANNEL_0_PRECISION": "14",
+  "USERPREFS_CHANNEL_0_PSK": "{ 0x38, 0x4b, 0xbc, 0xc0, 0x1d, 0xc0, 0x22, 0xd1, 0x81, 0xbf, 0x36, 0xb8, 0x61, 0x21, 0xe1, 0xfb, 0x96, 0xb7, 0x2e, 0x55, 0xbf, 0x74, 0x22, 0x7e, 0x9d, 0x6a, 0xfb, 0x48, 0xd6, 0x4c, 0xb1, 0xa1 }",
+  "USERPREFS_CHANNEL_0_UPLINK_ENABLED": "true",
   // "USERPREFS_CHANNEL_1_DOWNLINK_ENABLED": "false",
-  // "USERPREFS_CHANNEL_1_NAME": "NodeChat",
+  "USERPREFS_CHANNEL_1_NAME": "NodeChat",
   // "USERPREFS_CHANNEL_1_PRECISION": "14",
-  // "USERPREFS_CHANNEL_1_PSK": "{ 0x4e, 0x22, 0x1d, 0x8b, 0xc3, 0x09, 0x1b, 0xe2, 0x11, 0x9c, 0x89, 0x12, 0xf2, 0x25, 0x19, 0x5d, 0x15, 0x3e, 0x30, 0x7b, 0x86, 0xb6, 0xec, 0xc4, 0x6a, 0xc3, 0x96, 0x5e, 0x9e, 0x10, 0x9d, 0xd5 }",
+  "USERPREFS_CHANNEL_1_PSK": "{ 0x4e, 0x22, 0x1d, 0x8b, 0xc3, 0x09, 0x1b, 0xe2, 0x11, 0x9c, 0x89, 0x12, 0xf2, 0x25, 0x19, 0x5d, 0x15, 0x3e, 0x30, 0x7b, 0x86, 0xb6, 0xec, 0xc4, 0x6a, 0xc3, 0x96, 0x5e, 0x9e, 0x10, 0x9d, 0xd5 }",
   // "USERPREFS_CHANNEL_1_UPLINK_ENABLED": "false",
   // "USERPREFS_CHANNEL_2_DOWNLINK_ENABLED": "false",
-  // "USERPREFS_CHANNEL_2_NAME": "YardSale",
+  "USERPREFS_CHANNEL_2_NAME": "YardSale",
   // "USERPREFS_CHANNEL_2_PRECISION": "14",
-  // "USERPREFS_CHANNEL_2_PSK": "{ 0x15, 0x6f, 0xfe, 0x46, 0xd4, 0x56, 0x63, 0x8a, 0x54, 0x43, 0x13, 0xf2, 0xef, 0x6c, 0x63, 0x89, 0xf0, 0x06, 0x30, 0x52, 0xce, 0x36, 0x5e, 0xb1, 0xe8, 0xbb, 0x86, 0xe6, 0x26, 0x5b, 0x1d, 0x58 }",
+  "USERPREFS_CHANNEL_2_PSK": "{ 0x15, 0x6f, 0xfe, 0x46, 0xd4, 0x56, 0x63, 0x8a, 0x54, 0x43, 0x13, 0xf2, 0xef, 0x6c, 0x63, 0x89, 0xf0, 0x06, 0x30, 0x52, 0xce, 0x36, 0x5e, 0xb1, 0xe8, 0xbb, 0x86, 0xe6, 0x26, 0x5b, 0x1d, 0x58 }",
   // "USERPREFS_CHANNEL_2_UPLINK_ENABLED": "false",
   // "USERPREFS_CONFIG_GPS_MODE": "meshtastic_Config_PositionConfig_GpsMode_ENABLED",
-  // "USERPREFS_CONFIG_LORA_IGNORE_MQTT": "true",
+  "USERPREFS_CONFIG_LORA_IGNORE_MQTT": "true",
   // "USERPREFS_CONFIG_LORA_REGION": "meshtastic_Config_LoRaConfig_RegionCode_US",
   // "USERPREFS_CONFIG_OWNER_LONG_NAME": "My Long Name",
   // "USERPREFS_CONFIG_OWNER_SHORT_NAME": "MLN",
-  // "USERPREFS_EVENT_MODE": "1",
+  "USERPREFS_EVENT_MODE": "1",
   // "USERPREFS_FIXED_BLUETOOTH": "121212",
   // "USERPREFS_FIXED_GPS": "",
   // "USERPREFS_FIXED_GPS_ALT": "0",
@@ -30,16 +30,16 @@
   // "USERPREFS_CONFIG_SMART_POSITION_ENABLED": "false",
   // "USERPREFS_CONFIG_GPS_UPDATE_INTERVAL": "600",
   // "USERPREFS_CONFIG_POSITION_BROADCAST_INTERVAL": "1800",
-  // "USERPREFS_LORACONFIG_CHANNEL_NUM": "31",
-  // "USERPREFS_LORACONFIG_MODEM_PRESET": "meshtastic_Config_LoRaConfig_ModemPreset_SHORT_FAST",
+  "USERPREFS_LORACONFIG_CHANNEL_NUM": "31",
+  "USERPREFS_LORACONFIG_MODEM_PRESET": "meshtastic_Config_LoRaConfig_ModemPreset_SHORT_TURBO",
   // "USERPREFS_USE_ADMIN_KEY_0": "{ 0xcd, 0xc0, 0xb4, 0x3c, 0x53, 0x24, 0xdf, 0x13, 0xca, 0x5a, 0xa6, 0x0c, 0x0d, 0xec, 0x85, 0x5a, 0x4c, 0xf6, 0x1a, 0x96, 0x04, 0x1a, 0x3e, 0xfc, 0xbb, 0x8e, 0x33, 0x71, 0xe5, 0xfc, 0xff, 0x3c }",
   // "USERPREFS_USE_ADMIN_KEY_1": "{}",
   // "USERPREFS_USE_ADMIN_KEY_2": "{}",
-  // "USERPREFS_OEM_TEXT": "Caterham Car Club",
-  // "USERPREFS_OEM_FONT_SIZE": "0",
-  // "USERPREFS_OEM_IMAGE_WIDTH": "50",
-  // "USERPREFS_OEM_IMAGE_HEIGHT": "28",
-  // "USERPREFS_OEM_IMAGE_DATA": "{ 0x00, 0x00, 0xF0, 0x3F, 0x00, 0x00, 0x00, 0x00, 0x00, 0xFF, 0xFF, 0x03, 0x00, 0x00, 0x00, 0xC0, 0x07, 0x80, 0x0F, 0x00, 0x00, 0x00, 0xF0, 0x00, 0x00, 0x3C, 0x00, 0x00, 0x00, 0x38, 0x00, 0x00, 0x70, 0x00, 0x00, 0x00, 0x18, 0xFF, 0xFF, 0x61, 0x00, 0x00, 0x00, 0x0C, 0xFF, 0xFF, 0xC7, 0x00, 0x00, 0x00, 0x0C, 0xFF, 0xFF, 0xC7, 0x00, 0x00, 0x00, 0x18, 0xFF, 0xFF, 0x67, 0x00, 0x00, 0x00, 0x18, 0x1F, 0xF0, 0x67, 0x00, 0x00, 0x00, 0x30, 0x1F, 0xF8, 0x33, 0x00, 0x00, 0x00, 0x30, 0x00, 0xFC, 0x31, 0x00, 0x00, 0x00, 0x60, 0x00, 0xFE, 0x18, 0x00, 0x00, 0x00, 0x60, 0x00, 0x7E, 0x18, 0x00, 0x00, 0x00, 0xC0, 0x00, 0x3F, 0x0C, 0x00, 0x00, 0x00, 0xC0, 0x80, 0x1F, 0x0C, 0x00, 0x00, 0x00, 0x80, 0x81, 0x1F, 0x06, 0x00, 0x00, 0x00, 0x80, 0xC1, 0x0F, 0x06, 0x00, 0x00, 0x00, 0x00, 0xC3, 0x0F, 0x03, 0x00, 0x00, 0x00, 0x00, 0xC3, 0x0F, 0x03, 0x00, 0x00, 0x00, 0x00, 0xE6, 0x8F, 0x01, 0x00, 0x00, 0x00, 0x00, 0xEE, 0xC7, 0x01, 0x00, 0x00, 0x00, 0x00, 0x0C, 0xC0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x1C, 0xE0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x18, 0x60, 0x00, 0x00, 0x00, 0x00, 0x00, 0x70, 0x38, 0x00, 0x00, 0x00, 0x00, 0x00, 0xE0, 0x1F, 0x00, 0x00, 0x00, 0x00, 0x00, 0x80, 0x07, 0x00, 0x00, 0x00}",
+  "USERPREFS_OEM_TEXT": "Hamvention 2025",
+  "USERPREFS_OEM_FONT_SIZE": "0",
+  "USERPREFS_OEM_IMAGE_WIDTH": "50",
+  "USERPREFS_OEM_IMAGE_HEIGHT": "28",
+  "USERPREFS_OEM_IMAGE_DATA": "{ 0x00, 0xf0, 0xff, 0x03, 0x00, 0x00, 0x00, 0x00, 0x0e, 0x80, 0x7f, 0x00, 0x00, 0x00, 0x80, 0x01, 0x00, 0xec, 0x07, 0xf0, 0x00, 0x60, 0x00, 0x00, 0xd8, 0x3b, 0x88, 0x00, 0x30, 0x00, 0x00, 0xa0, 0xe7, 0x88, 0x00, 0x18, 0x08, 0x30, 0xc0, 0xe8, 0x87, 0x01, 0x0c, 0x1c, 0x38, 0x80, 0xde, 0x03, 0x02, 0x04, 0x1e, 0x78, 0x00, 0xbd, 0x05, 0x02, 0x02, 0x0e, 0xfc, 0x00, 0x7b, 0x36, 0x03, 0x02, 0x07, 0xfe, 0x00, 0x36, 0xcf, 0x00, 0x01, 0x07, 0xce, 0x01, 0xde, 0x06, 0x00, 0x81, 0x03, 0xc7, 0x03, 0xe6, 0x06, 0x00, 0xc1, 0x81, 0x87, 0x03, 0xec, 0x04, 0x00, 0xc1, 0x81, 0x03, 0x07, 0xec, 0x02, 0x00, 0xe1, 0xc0, 0x01, 0x07, 0x7c, 0x02, 0x00, 0x71, 0xe0, 0x01, 0x0e, 0xbc, 0x01, 0x00, 0x71, 0xe0, 0x00, 0x1c, 0xce, 0x00, 0x00, 0x39, 0x70, 0x00, 0x1c, 0xf6, 0x00, 0x00, 0x12, 0x70, 0x00, 0x38, 0x6a, 0x00, 0x00, 0x02, 0x20, 0x00, 0x30, 0x2f, 0x00, 0x00, 0x04, 0x00, 0x00, 0x90, 0x1f, 0x00, 0x00, 0x08, 0x00, 0x00, 0x80, 0x0e, 0x00, 0x00, 0x18, 0x00, 0x00, 0xc0, 0x05, 0x00, 0x00, 0x20, 0x00, 0x00, 0x30, 0x03, 0x00, 0x00, 0xc0, 0x00, 0x00, 0xf8, 0x00, 0x00, 0x00, 0x00, 0x03, 0x00, 0x3e, 0x00, 0x00, 0x00, 0x00, 0x1c, 0xe0, 0x07, 0x00, 0x00, 0x00, 0x00, 0xe0, 0x1f, 0x00, 0x00, 0x00, 0x00 }",
   // "USERPREFS_NETWORK_ENABLED_PROTOCOLS": "1", // Enable UDP mesh
   // "USERPREFS_NETWORK_WIFI_ENABLED": "true",
   // "USERPREFS_NETWORK_WIFI_SSID": "wifi_ssid",
