Update Seeed Solar Node

--- a/variants/Seeed_Solar_Node/platformio.ini
+++ b/variants/Seeed_Solar_Node/platformio.ini
@@ -1,5 +1,5 @@
 [env:Seeed_Solar_Node]
-board = Seeed_Solar_Node
+board = seeed_solar_node
 extends = nrf52840_base
 ;board_level = extra
 build_flags = ${nrf52840_base.build_flags} 
