--- a/variants/elecrow_panel/platformio.ini
+++ b/variants/elecrow_panel/platformio.ini
@@ -4,7 +4,6 @@ board = crowpanel
 board_check = true
 upload_protocol = esptool
 board_build.partitions = default_16MB.csv ; must be here for some reason, board.json is not enough !?
-
 build_flags = ${esp32s3_base.build_flags} -Os
   -I variants/elecrow_panel
   -D ELECROW_PANEL
@@ -21,9 +20,9 @@ build_flags = ${esp32s3_base.build_flags} -Os
   -D MESHTASTIC_EXCLUDE_SOCKETAPI=1
   -D MESHTASTIC_EXCLUDE_SCREEN=1
   -D MESHTASTIC_EXCLUDE_ENVIRONMENTAL_SENSOR=1
-;  -D INPUTDRIVER_BUTTON_TYPE=0
   -D HAS_TELEMETRY=0
   -D CONFIG_DISABLE_HAL_LOCKS=1
+  -D USE_PIN_BUZZER
   -D HAS_SCREEN=0
   -D HAS_TFT=1
   -D RAM_SIZE=6144
@@ -39,24 +38,24 @@ build_flags = ${esp32s3_base.build_flags} -Os
   -D USE_LOG_DEBUG
   -D LOG_DEBUG_INC=\"DebugConfiguration.h\"
   -D USE_PACKET_API
+  -D HAS_SDCARD
+  -D SD_SPI_FREQUENCY=75000000
 
 lib_deps = ${esp32s3_base.lib_deps}
   ${device-ui_base.lib_deps}
-  earlephilhower/ESP8266Audio@^1.9.9
-  earlephilhower/ESP8266SAM@^1.0.1
-  lovyan03/LovyanGFX@^1.2.0
-  hideakitai/TCA9534@^0.1.1
+  earlephilhower/ESP8266Audio@1.9.9
+  earlephilhower/ESP8266SAM@1.0.1
+  lovyan03/LovyanGFX@1.2.0 ; note: v1.2.7 breaks the elecrow 7" display functionality
+  hideakitai/TCA9534@0.1.1
 
 [crowpanel_small] ; 2.4, 2.8, 3.5 inch
 extends = crowpanel_base
-build.extra_flags = -DARDUINO_USB_CDC_ON_BOOT=1 -DARDUINO_USB_MODE=0
 build_flags =
   ${crowpanel_base.build_flags}
-  -D HAS_SDCARD
+  -D CROW_SELECT=1
   -D SDCARD_USE_SOFT_SPI
+  -D SDCARD_CS=7
   -D SPI_DRIVER_SELECT=2
-  -D USE_PIN_BUZZER
-;  -D INPUTDRIVER_BUTTON_TYPE=0 ; no button as this pin is assigned to LoRa cs!
   -D LGFX_DRIVER_TEMPLATE
   -D LGFX_DRIVER=LGFX_GENERIC
   -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_GENERIC.h\"
@@ -65,26 +64,18 @@ build_flags =
 
 [crowpanel_large] ; 4.3, 5.0, 7.0 inch
 extends = crowpanel_base
-build.extra_flags = -DARDUINO_USB_CDC_ON_BOOT=0 -DARDUINO_USB_MODE=1
 build_flags =
   ${crowpanel_base.build_flags}
-  -D HAS_SDCARD
-  -D TFT_HEIGHT=480
-  -D TFT_WIDTH=800
-  -D TFT_OFFSET_X=0
-  -D TFT_OFFSET_Y=0
-  -D TFT_BUSY=-1
+  -D CROW_SELECT=2
+  -D SDCARD_CS=7
   -D LGFX_DRIVER=LGFX_ELECROW70
   -D GFX_DRIVER_INC=\"graphics/LGFX/LGFX_ELECROW70.h\"
   -D DISPLAY_SET_RESOLUTION
-  -D MAP_FULL_REDRAW
 
-[env:elecrow-24-28-tft]
+[env:elecrow-adv-24-28-tft]
 extends = crowpanel_small
-
 build_flags =
   ${crowpanel_small.build_flags}
-  -D TFT_HEIGHT=320 ; needed in variant.h
   -D SPI_FREQUENCY=80000000
   -D LGFX_SCREEN_WIDTH=240
   -D LGFX_SCREEN_HEIGHT=320
@@ -104,12 +95,10 @@ build_flags =
   -D LGFX_TOUCH_RST=48
   -D LGFX_TOUCH_ROTATION=0
 
-[env:elecrow-35-tft]
+[env:elecrow-adv-35-tft]
 extends = crowpanel_small
-
 build_flags =
   ${crowpanel_small.build_flags}
-  -D TFT_WIDTH=320 ; needed in variant.h
   -D LV_CACHE_DEF_SIZE=2097152
   -D SPI_FREQUENCY=60000000
   -D LGFX_SCREEN_WIDTH=320
@@ -131,36 +120,9 @@ build_flags =
   -D LGFX_TOUCH_ROTATION=0
   -D DISPLAY_SET_RESOLUTION
 
-# 4.3 inch 800x480 IPS ST7265
-[env:elecrow-43-tft]
+; 4.3, 5.0, 7.0 inch 800x480 IPS (V1)
+[env:elecrow-adv1-43-50-70-tft]
 extends = crowpanel_large
-board_level = extra
-
 build_flags =
   ${crowpanel_large.build_flags}
-  -D CROW_SELECT=1
   -D VIEW_320x240
-
-# 5 inch 800x480 IPS ST7262
-[env:elecrow-50-tft]
-extends = crowpanel_large
-board_level = extra
-
-build_flags =
-  ${crowpanel_large.build_flags}
-  -D CROW_SELECT=2
-;  -D VIEW_800x480
-  -D VIEW_320x240
-
-# 7 inch 800x480 IPS SC7277
-[env:elecrow-70-tft]
-extends = crowpanel_large
-board_level = extra
-
-build_flags =
-  ${crowpanel_large.build_flags}
-  -D CROW_SELECT=3
-  -D FREQ_WRITE=13000000
-;  -D VIEW_800x480
-  -D VIEW_320x240
-
