--- a/variants/t-deck/platformio.ini
+++ b/variants/t-deck/platformio.ini
@@ -23,7 +23,7 @@ lib_deps = ${esp32s3_base.lib_deps}
 extends = env:t-deck
 
 build_flags =
-  ${env:t-deck.build_flags} -O0
+  ${env:t-deck.build_flags}
   -D CONFIG_DISABLE_HAL_LOCKS=1 ; "feels" to be a bit more stable without locks
   -D MESHTASTIC_EXCLUDE_CANNEDMESSAGES=1
   -D MESHTASTIC_EXCLUDE_INPUTBROKER=1
