--- a/variants/rak_killer_v2/platformio.ini
+++ b/variants/rak_killer_v2/platformio.ini
@@ -2,7 +2,7 @@
 [env:rak_killer_v2]
 extends = nrf52840_base
 board = promicro-nrf52840
-; board_level = extra
+board_level = extra
 debug_tool = jlink
 
 # add -DCFG_SYSVIEW if you want to use the Segger systemview tool for OS profiling.
