Removed RTC & ETH deps.

--- a/variants/rak4631_nomadstar_meteor_pro/platformio.ini
+++ b/variants/rak4631_nomadstar_meteor_pro/platformio.ini
@@ -12,14 +12,10 @@ build_flags = ${nrf52840_base.build_flags} -Ivariants/rak4631_nomadstar_meteor_p
   -DRADIOLIB_EXCLUDE_SX128X=1
   -DRADIOLIB_EXCLUDE_SX127X=1
   -DRADIOLIB_EXCLUDE_LR11X0=1
-build_src_filter = ${nrf52_base.build_src_filter} +<../variants/rak4631_nomadstar_meteor_pro> +<mesh/eth/> +<mesh/api/> +<mqtt/>
+build_src_filter = ${nrf52_base.build_src_filter} +<../variants/rak4631_nomadstar_meteor_pro> +<mesh/api/> +<mqtt/>
 lib_deps = 
   ${nrf52840_base.lib_deps}
-  ${networking_base.lib_deps}
-  melopero/Melopero RV3028@^1.1.0
-  https://github.com/RAKWireless/RAK13800-W5100S.git#1.0.2
   rakwireless/RAKwireless NCP5623 RGB LED library@^1.0.2
-  https://github.com/RAKWireless/RAK12034-BMX160.git#dcead07ffa267d3c906e9ca4a1330ab989e957e2
   https://github.com/NomadStar-outdoor/IOBoard-RGB-LP5562-Library.git#9c366c8
 
 ; If not set we will default to uploading over serial (first it forces bootloader entry by talking 1200bps to cdcacm)
